[project]
name = "devmentaltest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
